--- a/ExpensesTracker/app/src/main/AndroidManifest.xml
+++ b/ExpensesTracker/app/src/main/AndroidManifest.xml
@@ -9,6 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ExpensesTracker">
+        <activity android:name=".TotalSpentActivity"></activity>
+        <activity android:name=".CategoriesActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
