--- a/ExpensesTracker/app/src/main/AndroidManifest.xml
+++ b/ExpensesTracker/app/src/main/AndroidManifest.xml
@@ -9,10 +9,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ExpensesTracker">
-        <activity android:name=".MainActivity">
+        <activity android:name=".TransactionActivity"/>
+        <activity android:name=".TotalSpentActivity" />
+        <activity android:name=".MainActivity" />
+        <activity android:name=".TransactionCategoriesActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
