--- a/ExpensesTracker/app/src/main/AndroidManifest.xml
+++ b/ExpensesTracker/app/src/main/AndroidManifest.xml
@@ -9,8 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ExpensesTracker">
-        <activity android:name=".TotalSpentActivity"></activity>
-        <activity android:name=".CategoriesActivity" />
+        <activity android:name=".TransactionActivity"/>
+        <activity android:name=".TransactionCategoriesActivity" />
+        <activity android:name=".TotalSpentActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
