--- a/ExpensesTracker/app/src/main/AndroidManifest.xml
+++ b/ExpensesTracker/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ExpensesTracker">
-        <activity android:name=".TransactionActivity"/>
+        <activity android:name=".InitialActivity"/>
+        <activity android:name=".TransactionActivity" />
         <activity android:name=".TransactionCategoriesActivity" />
         <activity android:name=".TotalSpentActivity" />
         <activity android:name=".MainActivity">
