--- a/ExpensesTracker/app/src/main/AndroidManifest.xml
+++ b/ExpensesTracker/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         <activity android:name=".TransactionActivity" />
         <activity android:name=".TransactionCategoriesActivity" />
         <activity android:name=".TotalSpentActivity" />
+        <activity android:name=".GraphActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
