--- a/ExpensesTracker/app/build.gradle
+++ b/ExpensesTracker/app/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.android.application'
+    id 'com.chaquo.python'
 }
 
 android {
@@ -8,12 +9,37 @@ android {
 
     defaultConfig {
         applicationId "com.example.expensestracker"
+
+        python{
+            pip{
+                install "matplotlib"
+                install "pandas"
+            }
+        }
+
+        sourceSets{
+            main{
+                python{
+                    srcDirs = ["src/main/python"]
+                }
+            }
+        }
+
         minSdkVersion 24
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        ndk {
+            abiFilters "armeabi-v7a", "arm64-v8a", "x86", "x86_64"
+        }
+
+        python{
+            buildPython "C:\\Users\\tzana\\AppData\\Local\\Microsoft\\WindowsApps\\python.exe"
+        }
+
     }
 
     buildTypes {
